Added Go Back Button

--- a/List 3.html
+++ b/List 3.html
@@ -1,32 +1,31 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Assignment-02</title>
 </head>
 
 <body>
-
-<h1>Welcome To GeeksforGeeks Learning</h1>
-
-<h3>List of available courses</h3>
-
-<ul>
-<li>Data Structures & Algorithm</li>
-<li>Web Technology</li>
-<li>Apptitude & Logical Reasoning</li>
-<li>Programming Languages</li>
-</ul>
-
-<h3>Data Structures topics</h3>
-
-<ol>
-<li>Array</li>
-<li>Linked List</li>
-<li>Stacks</li>
-<li>Queues</li>
-<li>Trees</li>
-<li>Graphs</li>
-</ol>
-
+    <a href="index.html">Go Back</a>
+    <h1>Welcome To GeeksforGeeks Learning</h1>
+    <h3>List of available courses</h3>
+    <ul>
+        <li>Data Structures & Algorithm</li>
+        <li>Web Technology</li>
+        <li>Apptitude & Logical Reasoning</li>
+        <li>Programming Languages</li>
+    </ul>
+    <h3>Data Structures topics</h3>
+    <ol>
+        <li>Array</li>
+        <li>Linked List</li>
+        <li>Stacks</li>
+        <li>Queues</li>
+        <li>Trees</li>
+        <li>Graphs</li>
+    </ol>
 </body>
 
 </html>
