--- a/index.html
+++ b/index.html
@@ -8,49 +8,45 @@
 </head>
 
 <body>
-
     <center>
-
         <h1>Assignment-02</h1>
-
         <table>
             <tr>
                 <td>
-                    <a href="3.html">
+                    <a href="3.html" target="_blank">
                         <img src="3.png" width="250" height="250" alt="Image 1" border="2">
                     </a>
                 </td>
                 <td>
-                    <a href="5.html">
+                    <a href="5.html" target="_blank">
                         <img src="5.png" width="250" height="250" alt="Image 2" border="2">
                     </a>
                 </td>
                 <td>
-                    <a href="pBAtb.html">
+                    <a href="pBAtb.html" target="_blank">
                         <img src="pBAtb.gif" width="250" height="250" alt="Image 3" border="2">
                     </a>
                 </td>
             </tr>
             <tr>
                 <td>
-                    <a href="bjul6.html">
+                    <a href="bjul6.html" target="_blank">
                         <img src="bjul6.png" width="250" height="250" alt="Image 4" border="2">
                     </a>
                 </td>
                 <td>
-                    <a href="List 3.html">
+                    <a href="List 3.html" target="_blank">
                         <img src="List 3.png" width="250" height="250" alt="Image 5" border="2">
                     </a>
                 </td>
                 <td>
-                    <a href="List 4.html">
+                    <a href="List 4.html" target="_blank">
                         <img src="List 4.png" width="250" height="250" alt="Image 6" border="2">
                     </a>
                 </td>
             </tr>
         </table>
     </center>
-
 </body>
 
 </html>
