--- a/3.html
+++ b/3.html
@@ -1,33 +1,30 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Assignment-02</title>
 </head>
 
 <body>
-
-<ul>
-
-<li>Fruit
-
-<ul>
-<li>Bananas</li>
-<li>Apples
-
-<ul>
-<li>Green</li>
-<li>Red</li>
-</ul>
-
-</li>
-<li>Pears</li>
-</ul>
-
-</li>
-
-<li>Vegetables</li>
-<li>Meat</li>
-</ul>
-
+    <a href="index.html">Go Back</a>
+    <ul>
+        <li>Fruit
+            <ul>
+                <li>Bananas</li>
+                <li>Apples
+                    <ul>
+                        <li>Green</li>
+                        <li>Red</li>
+                    </ul>
+                </li>
+                <li>Pears</li>
+            </ul>
+        </li>
+        <li>Vegetables</li>
+        <li>Meat</li>
+    </ul>
 </body>
 
 </html>
